--- a/html/Ex04_dropdown.html
+++ b/html/Ex04_dropdown.html
@@ -9,7 +9,7 @@
 <!-- ================================================== -->
 
 
-  <title>도형 로딩 애니메이션 - 02</title>
+  <title>드롭다운 메뉴바</title>
 
   <link rel="stylesheet" href="../css/style.css">
   <script src="../js/jquery-3.6.0.js"></script>
@@ -27,14 +27,18 @@
 </head>
 <body>
   
-  <div class="container">
-    
-    <div class="loading2">
-      <span></span>
-      <span></span>
-    </div>
-  
+<div class="dropdown">
+  <button class="dropdown-btn">Real Estate Type</button>
+  <div class="dropdown-submenu">
+    <a href="#">All</a>
+    <a href="#">One room</a>
+    <a href="#">1.5 rooms</a>
+    <a href="#">Tow room</a>
+    <a href="#">three room</a>
+    <a href="#">Officetel</a>
+    <a href="#">Apartment</a>
   </div>
+</div>
 
 </body>
 </html>
