--- a/html/Ex06_mouseover.html
+++ b/html/Ex06_mouseover.html
@@ -26,6 +26,38 @@
 
 </head>
 <body>
-  
+
+
+  <div class="container6">
+
+    <div class="icon">
+      <img src="../images/icon-01.png" alt="">
+      <span>
+        This HTML tutorial contains hundreds of HTML examples.
+      </span>
+    </div>
+
+    <div class="icon">
+      <img src="../images/icon-02.png" alt="">
+      <span>
+        This CSS tutorial contains hundreds of CSS examples.
+      </span>
+    </div>
+
+    <div class="icon">
+      <img src="../images/icon-03.png" alt="">
+      <span>
+        AngularJS extends HTML with new attributes.
+      </span>
+    </div>
+
+    <div class="icon">
+      <img src="../images/icon-04.png" alt="">
+      <span>
+        Node.js is an open source server environment.      </span>
+    </div>
+  </div>
+
+
 </body>
 </html>
